<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/_textHeader"
        android:text="@string/text_Header"
        android:textSize="32sp"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Campo EditText para Distância -->
    <EditText
        android:id="@+id/editDistance"
        android:hint="@string/editDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/_textHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Texto Total de Km -->
    <TextView
        android:id="@+id/_totalKm"
        android:text="@string/totalKm"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Campo EditText para Preço -->
    <EditText
        android:id="@+id/editPrice"
        android:hint="@string/editPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/_totalKm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Texto Preço por Litro -->
    <TextView
        android:id="@+id/_textPriceLiter"
        android:text="@string/textPriceLiter"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Campo EditText para Autonomia -->
    <EditText
        android:id="@+id/editAutonomy"
        android:hint="@string/editAutonomy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/_textPriceLiter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Texto Autonomia -->
    <TextView
        android:id="@+id/_textAutonomy"
        android:text="@string/textAutonomy"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editAutonomy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Texto Ams -->
    <TextView
        android:id="@+id/_textAms"
        android:text="@string/textAms"
        android:textSize="16sp"
        android:gravity="center"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/_textAutonomy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <!-- Resultado -->
    <TextView
        android:id="@+id/textLabelResul"
        android:text="@string/textRes"
        android:textSize="32sp"
        android:textColor="@color/blue"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/_textAms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Botão Calcular -->
    <Button
        android:id="@+id/button_Calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonCalculate"
        android:textSize="20sp"
        android:padding="16dp"
        android:textAllCaps="true"
        android:backgroundTint="@color/lGreen"
        app:layout_constraintTop_toBottomOf="@id/textLabelResul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
